# NwSec

./: README.md
applications/attack/: README.md  attack-KaliX86-64.sh  common_roots.txt  makeemaildict.py
applications/attack/KaliX86-64/: .project  Dockerfile  email_common_roots.txt  lame.txt  setup.yml  setup_user.sh
applications/ca/: README.md  https_ca_proxy_load_balancer.drawio
applications/client/: README.md  client_UbuntuX86-64.sh
applications/client/UbuntuX86-64/: Dockerfile
applications/dhcpsvr/: README.md  dhcpsvr-UbuntuServerX86-64.sh
applications/dhcpsvr/UbuntuServerX86-64/: .project  Dockerfile  etc_dhcp_dhcpd.conf  etc_dhcp_dhcpd.conf.orig
applications/dnssvr/: README.md  dnssvr-UbuntuServerX86-64.sh  dnssvr_UbuntuServerX86-64.sh
applications/dnssvr/UbuntuServerX86-64/: .project  Dockerfile  etc_bind_named.conf.local  etc_bind_named.conf.options  etc_bind_zones_db.168.192  etc_bind_zones_db.25.168.192  etc_bind_zones_db.docker.netsec.edu  etc_bind_zones_db.netsec-docker.isi.jhu.edu  etc_bind_zones_db.nwsecdocker.jhu.edu  etc_resolv.conf
applications/elksvr/UbuntuServerX86-64/: .project  Dockerfile
applications/emailsvr/: README.md  email-detailed.drawio  email.drawio  emailsvr-UbuntuServerX86-64.sh
applications/emailsvr/UbuntuServerRPI4B/: Dockerfile  etc_dovecot_conf.d_10-master.conf  etc_dovecot_dovecot.conf  etc_postfix_main.cf  etc_postfix_master.cf
applications/iamsvr/: README.md
applications/inetutils/: Dockerfile  README.md  inetutils-1.9.4-PATH_PROCNET_DEV.patch  install-docker.sh  sources.list
applications/inetutils/inetutils-1.9.4/.pc/01_disable_useless_man_pages.patch/: Makefile.am
applications/inetutils/inetutils-1.9.4/ftp/: Makefile.am  domacro.c  ftp.c  main.c
applications/inetutils/inetutils-1.9.4/ifconfig/: Makefile.am  Makefile.in  changeif.c  ifconfig.c  options.c  printif.c  system.h
applications/inetutils/inetutils-1.9.4/ifconfig/system/: bsd.c  bsd.h  qnx.h  solaris.c
applications/inetutils/inetutils-1.9.4/ping/: Makefile.am  Makefile.in  libping.c  ping6.h  ping_address.c  ping_common.c  ping_echo.c  ping_timestamp.c
applications/inetutils/inetutils-1.9.4/tests/: Makefile.am  hostname.sh  ifconfig.sh  libls.sh  localhost.c  ping-localhost.sh  syslogd.sh  telnet-localhost.sh  tftp.sh  traceroute-localhost.sh
applications/ipasvr/: README.md  ipasvr_CentOsX86-64.sh
applications/krb5svr/: README.md  krb5svr_UbuntuServerX86-64.sh
applications/nfssvr/: README.md  nfssvr_UbuntuServerX86-64.sh
applications/nfssvr+termsvr/: README.md  nfssvr_plus_termsvr_UbuntuServerX86-64.sh
applications/python-client/: client.py
applications/selkssvr/: .project
applications/suricata/: README.md  dockerfile  suricata-KaliX86-64.sh  suricata-UbuntuServerX86-64.sh  suricata_KaliX86-64.sh  suricata_UbuntuServerX86-64.sh
applications/systemdsvr/: Dockerfile  README.md  systemdsvr-UbuntuServerX86-64.sh
applications/termsvr/: READ  README.md  sshcrack.md  termsvr_UbuntuServerX86-64.sh
applications/websvr/: README.md  README_haproxy.md  README_webonly.md  nginx-rate-limiting.md  proxy_load_balancer.drawio  timer.py  websvr-UbuntuServerX86-64.sh  websvr_UbuntuServerX86-64.sh
applications/working/inetutils/inetutils-1.9.4/.pc/01_disable_useless_man_pages.patch/: configure.ac
applications/working/inetutils/inetutils-1.9.4/.pc/22_syslogd_conf.patch/src/: Makefile.am
applications/working/inetutils/inetutils-1.9.4/ifconfig/system/: Makefile.am  Makefile.in  generic.c  generic.h  linux.c  linux.h  qnx.c  solaris.h
applications/working/inetutils/inetutils-1.9.4/libinetutils/: Makefile.am  Makefile.in  argcv.h  if_index.c  krcmd.c  libinetutils.h  localhost.c  shishi.c  shishi_def.h  ttymsg.c  utmp_init.c
applications/working/inetutils/inetutils-1.9.4/man/: Makefile.am  dnsdomainname.1  ftp.1  hostname.h2m  ifconfig.1  ifconfig.h2m  inetd.h2m  ping.h2m  ping6.h2m  rcp.h2m  rexec.1  rexec.h2m  rexecd.h2m  rlogin.1  rlogin.h2m  rlogind.8  talk.h2m  talkd.8  telnet.h2m  telnetd.8  telnetd.h2m  tftpd.8  uucpd.8  uucpd.h2m
applications/working/inetutils/inetutils-1.9.4/talk/: Makefile.am  get_names.c  look_up.c  talk.c  talk.h  talk_ctl.h
applications/working/inetutils/inetutils-1.9.4/whois/: Makefile.am  Makefile.in  as_del.h  data.h  ip_del_list  make_as_del.pl  tld_serv.h  whois.h
config/: README.md  infrastructureVM_UbuntuServerX86-64.sh  infrastructureVm-UbuntuServerX86-64.sh  infrastructureVm_UbuntuServerX86-64.sh  targetVMUbuntuServerX86-64.sh  targetVm-UbuntuServerX86-64.sh
config/OpenWrtX86-64/: dhcp  firewall  network
config/UbuntuServerX86-64/: .project  README.md  etc_netplan_100-config.yaml  etc_netplan_100_config.yaml  etc_netplan_101-config.yaml  etc_netplan_101_config.yaml  etc_netplan_99-config.yaml  etc_netplan_99_config.yaml  infrastructureVm-README.md  infrastructureVm-install.sh  infrastructureVm-install1.sh  infrastructureVm-install2.sh  infrastructureVm-remove.sh  prepshutdown-netplan.sh  remove.sh  targetREADME.md  targetVm-README.md  targetVm-eth-mac.txt  targetVm-install.sh  targetVm-remove.sh  targetvm-install.sh  warmstart-netplan.sh  warmstart_netplan.sh
config/network-ubuntu/: .project  etc_netplan_100_config.yaml  etc_netplan_101_config.yaml  etc_netplan_99_config.yaml  install.sh  prepshutdown_netplan.sh  readme.txt  remove.sh  startup.sh  ubuntu-2-eth-mac.txt
examples/icmp-mtu/: Makefile  README.md  icmp-mtu.c
examples/icmp-quench/: Makefile  README.md  icmp-quench.c
examples/icmp-reset/: Makefile  README  README.es  icmp-reset.c
examples/l-sctp-msdemo/: Makefile  README.md  common.h  reference.txt  sctp-v1b.xml  sctpclnt.c  sctpsrvr.c
examples/unpv13e/: .gitignore  README.md  reference.txt
tools/Brostrend/: Dockerfile  build.sh  sources.list
tools/bridge/: README.txt  create-bridge.sh  etc_netplan_100_config.yaml  etc_netplan_99_config.yaml  setup-routes.sh
tools/goroot/: goroot.c
tools/ismtp/: ismtp.patch  readme.txt
tools/network/: etc_netplan_100_config.yaml  etc_netplan_99_config.yaml  setup-routes.sh
tools/scripts/: create-user.sh  setup-user.sh
(+464 files in other folders)
